# python-call-c-cpp

./: .gitmodules  CMakeLists.txt  README.md  main.c
c_library/include/: to_upper.h
ctypes/: README.md  main.py
ctypes/c_library/: multiply.c  to_upper.c
ctypes/c_library/include/: multiply.h
pybind11-call/: CMakeLists.txt  README.md  calc.cpp  main.py
